--- a/js/css/1.css
+++ b/js/css/1.css
@@ -1,9 +1,11 @@
 *{
     background-size: cover;
+    background-attachment: fixed;
 }
 
 .h1{
-    margin-top: 100px;
+    text-align: center;
+    margin-top: 60px;
     padding: 40px;
     color: pink;
 }
@@ -31,4 +33,69 @@ form .search {
     text-align: center;
     background-color: pink;
     color: #FFFFFF;
+}
+
+ul{
+    height: 20px;
+    width:50%;
+    list-style-type: none;
+}
+ul li{
+    float: left;
+    width: 100px;
+    height: 50px;
+    line-height: 50px;
+    text-align: center;
+    font-size: 20px;
+    list-style: none;
+}
+ul a {
+    text-decoration: none;
+    color: white;
+}
+ul li ul li{
+    display: none;
+}
+ul li:hover ul li {
+    display: block;
+}
+ul li:hover {
+    background-color: pink;
+}
+
+.buttonf {
+    margin-top: 100px;
+    margin-left: 450px;
+    float: left;
+    width: 80px;
+    line-height: 90px;
+    text-align: center;
+    font-size: 20px;
+}
+
+.buttonxs {
+    margin-top: 100px;
+    margin-left: 50px;
+    float: left;
+    width: 80px;
+    line-height: 90px;
+    text-align: center;
+    font-size: 20px;
+}
+
+.buttonp {
+    background-color: rgba(240, 248, 255, 0.32);
+    color: pink;
+    border-radius: 30px;
+    height: 80px;
+    width: 80px;
+    border: none;
+}
+
+.buttont {
+    background-color: rgba(240, 248, 255, 0);
+    color: pink;
+    border-radius: 30px;
+    height: 10px;
+    border: none;
 }
