--- a/js/css/1.css
+++ b/js/css/1.css
@@ -84,7 +84,16 @@ ul li:hover {
 }
 
 .buttonp {
-    background-color: rgba(240, 248, 255, 0.32);
+    background-color: rgba(255, 192, 203, 0.213);
+    color: pink;
+    border-radius: 30px;
+    height: 80px;
+    width: 80px;
+    border: none;
+}
+
+.buttonp:hover {
+    background-color: rgba(255, 192, 203, 0.675);
     color: pink;
     border-radius: 30px;
     height: 80px;
@@ -93,7 +102,7 @@ ul li:hover {
 }
 
 .buttont {
-    background-color: rgba(240, 248, 255, 0);
+    background-color: rgba(255, 192, 203, 0.213);
     color: pink;
     border-radius: 30px;
     height: 10px;
