--- a/js/css/1.css
+++ b/js/css/1.css
@@ -17,7 +17,7 @@ form .text {
     display: inline-block;
     margin-top: 45px;
     border: 0;
-    width: 560px;
+    width: 33.5%;
     height: 35px;
     font-size: 14px;
     outline: none;
@@ -37,7 +37,7 @@ form .search {
 
 ul{
     height: 20px;
-    width:50%;
+    width: 50%;
     list-style-type: none;
 }
 ul li{
@@ -53,6 +53,10 @@ ul a {
     text-decoration: none;
     color: white;
 }
+.black {
+    text-decoration: none;
+    color: black;
+}
 ul li ul li{
     display: none;
 }
@@ -64,25 +68,23 @@ ul li:hover {
 }
 
 .buttonf {
-    margin-top: 100px;
-    margin-left: 450px;
+    margin-top: 6%;
+    margin-left: 27%;
     float: left;
     width: 80px;
     line-height: 90px;
     text-align: center;
     font-size: 20px;
 }
-
 .buttonxs {
-    margin-top: 100px;
-    margin-left: 50px;
+    margin-top: 6%;
+    margin-left: 3%;
     float: left;
     width: 80px;
     line-height: 90px;
     text-align: center;
     font-size: 20px;
 }
-
 .buttonp {
     background-color: rgba(255, 192, 203, 0.213);
     color: pink;
@@ -91,7 +93,6 @@ ul li:hover {
     width: 80px;
     border: none;
 }
-
 .buttonp:hover {
     background-color: rgba(255, 192, 203, 0.675);
     color: pink;
@@ -100,10 +101,31 @@ ul li:hover {
     width: 80px;
     border: none;
 }
-
 .buttont {
-    background-color: rgba(255, 192, 203, 0.213);
+    background-color: rgba(255, 192, 203, 0);
     color: pink;
+    border-radius: 30px;
+    height: 10px;
+    border: none;
+}
+
+
+.txtr {
+    background-color: rgba(255, 192, 203, 0.5);
+    margin-top: 9%;
+    margin-left: 20%;
+    float: left;
+    width: 60%;
+    height: 300px;
+    line-height: 30px;
+    text-align: start;
+    font-size: 20px;
+    border-radius: 30px;
+    border: none;
+}
+.textr {
+    background-color: rgba(255, 192, 203, 0);
+    color: rgb(8, 6, 6);
     border-radius: 30px;
     height: 10px;
     border: none;
